force-app/main/default/objects/Certification_Answer_Snapshot__c/Certification_Answer_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Certification Answer Snapshot</label>
    <nameField>
        <label>Certification Answer Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Answer Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>