force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Certification_Answer__c.field-meta.xml
<CustomField>
    <fullName>Certification_Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Answer</label>
    <referenceTo>Certification_Answer__c</referenceTo>
    <relationshipLabel>Certification Answer Snapshots</relationshipLabel>
    <relationshipName>Certification_Answer_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>