force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Certification_Rating__c.field-meta.xml
<CustomField>
    <fullName>Certification_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Rating</label>
    <referenceTo>Certification_Rating__c</referenceTo>
    <relationshipLabel>Certification Answer Snapshots</relationshipLabel>
    <relationshipName>Certification_Answer_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>