force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Escalation_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Email_Date__c</fullName>
    <label>Escalation Email Date</label>
    <type>Date</type>
</CustomField>