force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Manager_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email_Date__c</fullName>
    <label>Manager Email Date</label>
    <type>Date</type>
</CustomField>