force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Rating_Names_Picklist_Snap__c.field-meta.xml
<CustomField>
    <fullName>Rating_Names_Picklist_Snap__c</fullName>
    <description>This picklist must appear in both Certification Answers and Certification Answer Snapshots to enable reporting.</description>
    <label>Rating Names Picklist Snap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating_Names</valueSetName>
    </valueSet>
</CustomField>