force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Rating_Score__c.field-meta.xml
<CustomField>
    <fullName>Rating_Score__c</fullName>
    <label>Certification Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>