force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Rating_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rating_Start_Date__c</fullName>
    <label>Rating Start Date</label>
    <type>Date</type>
</CustomField>