force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Added as lookup to enable reporting based on sales rep profile / company levels.</description>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Certification Answer Snapshots</relationshipLabel>
    <relationshipName>Certification_Answer_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>