force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Snapshot_Scheduled_Month__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Scheduled_Month__c</fullName>
    <formula>MONTH( Snapshot_Scheduled_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Scheduled Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>