force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Snapshot_Scheduled_Year__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Scheduled_Year__c</fullName>
    <formula>TEXT(YEAR(Snapshot_Scheduled_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Scheduled Year</label>
    <type>Text</type>
</CustomField>