force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Tenatative_rating_score__c.field-meta.xml
<CustomField>
    <fullName>Tenatative_rating_score__c</fullName>
    <label>Tenatative rating/score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>