force-app/main/default/objects/Certification_Answer_Snapshot__c/fields/Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Score__c</fullName>
    <label>Weighted Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>